feat: develop payment form.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST=localhost
 PORT=3000
 
-IYZIPAY_URI
-IYZIPAY_API_KEY
-IYZIPAY_SECRET_KEY
+IYZIPAY_URI=https://api.iyzipay.com
+IYZIPAY_API_KEY=8LPkbFk3ewfhWa7lIQPhtQODIViuUg1G
+IYZIPAY_SECRET_KEY=OxK1oJiEEtf6cJfn0siGFkhiKBlhnOCk
