--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "helmet": "^8.1.0",
     "i18n": "^0.15.1",
     "iyzipay": "^2.0.64",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "node-cron": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
