--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "i18n": "^0.15.1",
     "iyzipay": "^2.0.64",
     "multer": "^2.0.1",
-    "node-cron": "^4.1.1"
+    "node-cron": "^4.1.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
