--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "iyzipay": "^2.0.64",
     "multer": "^2.0.1",
     "node-cron": "^4.1.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "accept-language-parser": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
