--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-HOST=localhost
-PORT=3010
+DATABASE_URL="file:./dev.db"
+IYZIPAY_API_KEY=''
+IYZIPAY_SECRET_KEY=''
+IYZIPAY_URI=''
+ALLOWED_DOMAINS=http://localhost:3000,http://localhost:3001
+PORT=3011
 
-IYZIPAY_URI=https://api.iyzipay.com
-IYZIPAY_API_KEY=8LPkbFk3ewfhWa7lIQPhtQODIViuUg1G
-IYZIPAY_SECRET_KEY=xJyBGXgwA1G1nJ6BmdixgjRmgNeaqYf9
+
+
