--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "i18n": "^0.15.1",
+    "iconv-lite": "^0.6.3",
     "iyzipay": "^2.0.64",
+    "moment-timezone": "^0.6.0",
     "multer": "^2.0.1",
     "node-cron": "^4.1.1",
     "node-fetch": "^2.7.0",
